# resnet

./: .gitignore  main.py  pyproject.toml  split.py
config/: config.yaml
src/config/: __init__.py  action.py  auto_name_store.py  model.py
src/config/pipeline/: action.py
src/config/pipeline/loggers/: logger.py
src/data/: celeb_a.py  cifar.py
src/models/: res_net.py  resnet.py  seblock.py
src/pipeline/: action.py  checkpoint.py  trainer.py
src/pipeline/loggers/: wandb_logger.py
