[tool.poetry]
name = "resnet"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
torch = "^2.2.2"
torchvision = "^0.17.2"
matplotlib = "^3.8.3"
scikit-learn = "^1.4.1.post1"
torcheval-nightly = "^2024.4.1"
lightning = "^2.2.1"
hydra-zen = "^0.12.1"
beartype = "^0.17.2"
polars = "^0.20.18"
pandas = "1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
